--- a/style.css
+++ b/style.css
@@ -1,5 +1,12 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+body {
+    background-color: blue;
+}
+
+h1 {
+    text-align: center;
+    width: 100%;
+}
+
+li {
+    font-size: xx-large;
 }
